--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ tokio-util = { version = "0.3", features = ["codec"], optional = true }
 bytes      = { version = "0.5", optional = true }
 byteorder  = { version = "1.3", optional = true }
 
-[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
+[target.'cfg(any(target_os = "linux"))'.dependencies]
 ioctl      = { version = "0.5", package = "ioctl-sys" }
 
 [dev-dependencies]
